<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/cvMainDialog"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/glDeleteDialog"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:guidelineUseRtl="true"
			app:layout_constraintGuide_percent="0.43" />

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/txtTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/_16sdp"
			android:gravity="center"
			android:text="@string/sure_delete_item"
			android:textAppearance="@style/TextAppearance.FontMedium"
			android:textColor="@color/color18"
			android:textSize="@dimen/_10ssp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btnAction"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			android:text="@string/delete_it"
			android:textColor="@color/color18"
			android:textSize="@dimen/_9ssp"
			app:backgroundTint="@color/colorD9"
			app:cornerRadius="0dp"
			app:layout_constraintBottom_toBottomOf="@id/btnClose"
			app:layout_constraintEnd_toStartOf="@id/glDeleteDialog"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@id/btnClose" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btnClose"
			android:layout_width="0dp"
			android:layout_height="@dimen/_34sdp"
			android:layout_marginStart="@dimen/_8sdp"
			android:layout_marginTop="@dimen/_31sdp"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			android:text="@string/keep_it"
			android:textAppearance="@style/TextAppearance.FontMedium"
			android:textColor="@color/colorF1"
			android:textSize="@dimen/_9ssp"
			app:cornerRadius="0dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/glDeleteDialog"
			app:layout_constraintTop_toBottomOf="@id/txtTitle" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
